--- a/examples/human_classical_vs_nonclassical_monocyte_study_RNA-seq_analysis.ipynb
+++ b/examples/human_classical_vs_nonclassical_monocyte_study_RNA-seq_analysis.ipynb
@@ -129,20 +129,21 @@
     }
    ],
    "source": [
-    "cr = CountReads('SrHt_monocyte_expressionMatrix.txt', # count matrix file name. It can be text file or Excel file.\n",
-    "                sep='\\t',                    # field separator, this is a tab-separated file.\n",
-    "                group_sample_sep='ical',     # the heading has format classical01\tclassical02.\n",
-    "                igroup=1,           # the first igroup strings after split by group_sample_sep will\n",
-    "                                    # be used as the the group name\n",
-    "                has_groups=True,    # Sample names contain info for experimental groups, see above.\n",
-    "                sample_name_transform=None, # A function to transform sample names, in case the sample\n",
-    "                                            # names cannot be easily separated into groups and samples.\n",
-    "                is_microarray=False, # Rosely support read microarray data, Microarray data should have \n",
-    "                                     # one column of Detection_Pval ('pval' is used for patter matching) \n",
-    "                                     # for (after) each data column. Data with p-value > 0.05 is set to NaN.\n",
-    "               # **kwargs,           # Additional keyword arguments can be passed to pandas read_excel\n",
-    "                                     # or read_csv functions.\n",
-    "               )\n",
+    "cr = CountReads(\n",
+    "    'SrHt_monocyte_expressionMatrix.txt', # count matrix file name. It can be text file or Excel file.\n",
+    "    sep='\\t',                    # field separator, this is a tab-separated file.\n",
+    "    group_sample_sep='ical',     # the heading has format classical01\tclassical02.\n",
+    "    igroup=1,           # the first igroup strings after split by group_sample_sep will\n",
+    "                        # be used as the the group name\n",
+    "    has_groups=True,    # Sample names contain info for experimental groups, see above.\n",
+    "    sample_name_transform=None, # A function to transform sample names, in case the sample\n",
+    "                                # names cannot be easily separated into groups and samples.\n",
+    "    is_microarray=False, # Rosely support read microarray data, Microarray data should have \n",
+    "                         # one column of Detection_Pval ('pval' is used for patter matching) \n",
+    "                         # for (after) each data column. Data with p-value > 0.05 is set to NaN.\n",
+    "   # **kwargs,           # Additional keyword arguments can be passed to pandas read_excel\n",
+    "                         # or read_csv functions.\n",
+    "   )\n",
     "\n",
     "cr.normalize_data(normalize_by='upper quantile4', # Use upper 4-quantile for cross-sample normalization.\n",
     "                  normcutoff=10)     # Only rows with count > 10 will be used for normalization.\n",
@@ -585,43 +586,47 @@
     "nd = cr.normdata\n",
     "res = count_analysis(\n",
     "    # Non-default parameters:\n",
-    "    [nd['class'],       # A list of groups to compare. The sign of change will be group i>0 subtracting group i-1\n",
-    "     nd['nonclass']],   # \n",
-    "    paired=True,        # If doing paired t-test, sample names between samples must match. Default False.\n",
-    "    transform='log5',   # Transform data x by log(5 + x). 'log5' can also be replaced by a number to do power \n",
-    "                        # transformation. Default 1 for no transform.\n",
-    "    minmean=10,         # Minimum mean of all samples before transform to be included in the analysis. Default nan.\n",
-    "    weighted=True,      # When weighted==True and sample_weights is not set, each sample will be weighted\n",
-    "                        # by inverse of mean variances (Squared Errors divided by sum SE) of all genes.\n",
-    "    do_SVA=True,        # Perform surrogate variable analysis (SVA) to remove the influence of hidden variables.\n",
-    "    nSV=5,              # Number of surrogate variables to incorporate. Should be smaller than the total sample size.\n",
-    "                        # Larger values may cause overfitting, although ridge-regularization can mitigate this problem. \n",
-    "                        # Larger values (e.g. 15) produced more SDEGs here, but the generality has not been tested.\n",
-    "    debug=True,         # Debug mode saves internal variables into res.vbs, necessary for plotting variances.\n",
+    "    [nd['class'],       # A list of groups to compare. The sign of change will be group i>0 \n",
+    "     nd['nonclass']],   # subtracting group i-1\n",
+    "    paired=True,        # If doing paired t-test, sample names between samples must match.\n",
+    "    transform='log5',   # Transform data x by log(5 + x). 'log5' can also be replaced by a number\n",
+    "                        # to do power transformation. Default 1 for no transform.\n",
+    "    minmean=10,         # Minimum mean of all samples before transform to be included in the \n",
+    "                        # analysis. Default nan.\n",
+    "    weighted=True,      # When True and sample_weights is not set, each sample will be weighted by\n",
+    "                        # inverse mean variances (Squared Errors divided by sum SE) of all genes.\n",
+    "    do_SVA=True,        # Surrogate variable analysis (SVA) to remove hidden variables influence.\n",
+    "    nSV=5,              # Number of surrogate variables to incorporate. Should be smaller than the\n",
+    "                        # total sample size. Larger values may cause overfitting, although ridge-\n",
+    "                        # regularization can mitigate this problem. Larger values (e.g. 15) \n",
+    "                        # produced also more SDEGs here, but the generality has not been tested.\n",
+    "    debug=True,         # Saves internal variables into res.vbs, necessary for plotting variances.\n",
     "\n",
     "    \n",
     "    # Default parameters:\n",
-    "    pre_neutralize=True,# Partially pre-deflate inflated degrees of freedom based on power of p-values before \n",
-    "                        # ascertained t-test.\n",
+    "    pre_neutralize=True,# Partially pre-deflate inflated degrees of freedom based on power of \n",
+    "                        # p-values before ascertained t-test.\n",
     "    method='ascertained_ttest', # if method is set to non-default values, normal t-test is used.\n",
     "    controls=None,      # A list of control genes for cross-group normalization.\n",
-    "    sample_weights=None,# A dict for weight of each sample. Weight must be <=1 and indicate the effective sample size.\n",
-    "                        # If set, this parameter overwrite parameter 'weighted'.\n",
+    "    sample_weights=None,# A dict for weight of each sample. Weight must be <=1 and indicate the\n",
+    "                        # effective sample size. If set, it will overwrite parameter 'weighted'.\n",
     "    minn=1.25,          # A minimum number of total replicates required to include in the analysis.\n",
-    "    drop_missmatch=True,# If paired, samples with names not matching the other group will be dropped. \n",
-    "    equalV=False,       # For un-paired test, Welch's t-test is used. If equalV=True, Student's t-test is used.\n",
-    "                        # Both can be used as downstream of ascertained t-test or used independently if method is set.\n",
-    "    span=None,          # span (0 < span < 1) parameter for loess fit. By default, span will be adaptive selected.\n",
+    "    drop_missmatch=True,# If paired, samples with names not matching the other group are dropped.\n",
+    "    equalV=False,       # For un-paired test, Welch's t-test is used. If equalV=True, Student's\n",
+    "                        # t-test is used. Both can be used as downstream of ascertained t-test \n",
+    "                        # or used independently if method is set to non-default.\n",
+    "    span=None,          # span (0 < span < 1) for loess fit. By default, it is adaptive selected.\n",
     "    ridge=True,         # Whether regularization by ridge regression will be performed in SVA.\n",
-    "    penaltyRatioToSV=0.2, # How much the design variables are penalized relative to the surrogate variables.\n",
-    "    normalize_min_pval=0.1, # Only genes with p-values of Student's or Welch's t-test above this value will be used \n",
-    "                            # as controls for intra-group sample normalization and cross-group normalization.\n",
-    "    parallel=True,      # Use parallel computation to speed up, but debug may be more difficult in case of errors.\n",
-    "    neutralize=True,    # Whether neutrality-controlled p-values will be calculated and put in DataFrame res.results. \n",
-    "                        # If set to False, raw p-values will be used. If pre_neutralize=True, the p-values will NOT \n",
-    "                        # be corrected back to the expected values without pre-neutralization.\n",
+    "    penaltyRatioToSV=0.2, # How much the design variables are penalized relative to the SVs.\n",
+    "    normalize_min_pval=0.1, # Only genes with p-values of above this value will be used as controls\n",
+    "                            # for intra-group sample normalization and cross-group normalization.\n",
+    "    parallel=True,      # Parallel computation to speed up; but not easy for debug.\n",
+    "    neutralize=True,    # Neutrality-controlled p-values will be calculated and put in res.results. \n",
+    "                        # If False, raw p-values will be used. If pre_neutralize=True, the p-values\n",
+    "                        # will NOT be corrected to the expected values without pre-neutralization.\n",
     "\n",
-    "    # There are also default parameters for function neup (to calculate neutrality-controlled p-values). See below.\n",
+    "    # There are also default parameters for function neup (to calculate neutrality-controlled \n",
+    "    # p-values). See below.\n",
     "    )\n",
     "print('Computation time (s):', time.time() - t0)\n",
     "print('Top 5 differentially expressed genes:')\n",
@@ -795,21 +800,21 @@
    ],
    "source": [
     "res.neutralize_p_values(\n",
-    "    global_changes=True,# Global changes are assumed. Since set to True, neup will less aggressively push p-values\n",
-    "                        # to neutral p-values and result in more identified SDEGs. However, strong justifications\n",
-    "                        # has to be made to do this, e.g., no intra-group sample correlations are likely. \n",
+    "    global_changes=True,# Global changes are assumed and neup will less aggressively push p-values\n",
+    "                        # to neutral values and identify more SDEGs. However, strong justification\n",
+    "                        # is needed for this, e.g., no intra-group sample correlations are likely. \n",
     "    # Default parameters:\n",
-    "    LFDRthr0=0.5,       # The threshold LFDR between random and non-random p-values.\n",
-    "    minr0=0,            # Minimum assumed rank proportion of neutral genes.\n",
-    "    fine_tune=True,     # Whether p-values will be fitted by y = x ** (a + b*y**c) on log scale.\n",
-    "    nbins=50,           # nbins used to partition the z-scores into bins to count frequency. However, this is only\n",
-    "                        # proportional to the real number that will be adaptively changed based on data number. \n",
-    "    df_fit=5,           # degrees of the polynomials in poission regression to fit empirical z-score density function.\n",
-    "    with_plot=True,     # The z-score densities and p-values and LFDRs will be plotted. Ouput will be verbose.\n",
-    "    new_figure=True,    # A new figure will be created for the plot.\n",
-    "    plotLFDR = True,    # The axis of z-score densities for calculating LFDRs will be plotted.\n",
-    "    data_name='data',   # The string to be displayed in the legend on the z-score density function plot.\n",
-    "    subplot_label='',   # One can use something like a, b, c ... or label each axis.\n",
+    "    LFDRthr0=0.5,    # The threshold LFDR between random and non-random p-values.\n",
+    "    minr0=0,         # Minimum assumed rank proportion of neutral genes.\n",
+    "    fine_tune=True,  # Whether p-values will be fitted by y = x ** (a + b*y**c) on log scale.\n",
+    "    nbins=50,        # # of bins to partition z-scores to count frequency. But this is only\n",
+    "                     # proportional, the real number is adaptively changed based on data number. \n",
+    "    df_fit=5,        # degrees of polynomials in Poisson regression of z-score density function.\n",
+    "    with_plot=True,  # Plot the z-score densities, p-values and LFDRs. Ouput will be verbose.\n",
+    "    new_figure=True, # A new figure will be created for the plot.\n",
+    "    plotLFDR = True, # The axis of z-score densities for calculating LFDRs will be plotted.\n",
+    "    data_name='data',# The string to display in the legend on the z-score density function plot.\n",
+    "    subplot_label='',# One can use something like a, b, c ... or label each axis.\n",
     ")\n",
     "print('Top 5 differentially expressed genes:')\n",
     "res.results.head(n=5)"
