--- a/examples/human_classical_vs_nonclassical_monocyte_study_RNA-seq_analysis.ipynb
+++ b/examples/human_classical_vs_nonclassical_monocyte_study_RNA-seq_analysis.ipynb
@@ -130,7 +130,7 @@
    ],
    "source": [
     "cr = CountReads(\n",
-    "    'SrHt_monocyte_expressionMatrix.txt', # count matrix file name. It can be text file or Excel file.\n",
+    "    'SrHt_monocyte_expressionMatrix.txt', # count matrix file name. It can be text or Excel files.\n",
     "    sep='\\t',                    # field separator, this is a tab-separated file.\n",
     "    group_sample_sep='ical',     # the heading has format classical01\tclassical02.\n",
     "    igroup=1,           # the first igroup strings after split by group_sample_sep will\n",
@@ -610,7 +610,7 @@
     "    controls=None,      # A list of control genes for cross-group normalization.\n",
     "    sample_weights=None,# A dict for weight of each sample. Weight must be <=1 and indicate the\n",
     "                        # effective sample size. If set, it will overwrite parameter 'weighted'.\n",
-    "    minn=1.25,          # A minimum number of total replicates required to include in the analysis.\n",
+    "    minn=1.25,          # Minimum number of total replicates required to include in the analysis.\n",
     "    drop_missmatch=True,# If paired, samples with names not matching the other group are dropped.\n",
     "    equalV=False,       # For un-paired test, Welch's t-test is used. If equalV=True, Student's\n",
     "                        # t-test is used. Both can be used as downstream of ascertained t-test \n",
@@ -618,11 +618,11 @@
     "    span=None,          # span (0 < span < 1) for loess fit. By default, it is adaptive selected.\n",
     "    ridge=True,         # Whether regularization by ridge regression will be performed in SVA.\n",
     "    penaltyRatioToSV=0.2, # How much the design variables are penalized relative to the SVs.\n",
-    "    normalize_min_pval=0.1, # Only genes with p-values of above this value will be used as controls\n",
+    "    normalize_min_pval=0.1, # Only genes with p-values above this value will be used as controls\n",
     "                            # for intra-group sample normalization and cross-group normalization.\n",
     "    parallel=True,      # Parallel computation to speed up; but not easy for debug.\n",
-    "    neutralize=True,    # Neutrality-controlled p-values will be calculated and put in res.results. \n",
-    "                        # If False, raw p-values will be used. If pre_neutralize=True, the p-values\n",
+    "    neutralize=True,    # Neutrality-controlled p-values will be calculated and put in res.results \n",
+    "                        # If False, raw p-values will be used. If pre_neutralize=True, p-values\n",
     "                        # will NOT be corrected to the expected values without pre-neutralization.\n",
     "\n",
     "    # There are also default parameters for function neup (to calculate neutrality-controlled \n",
