--- a/examples/manuscript_code/rosely_test_yeast_48rep_and_monocyte_RNAseq.ipynb
+++ b/examples/manuscript_code/rosely_test_yeast_48rep_and_monocyte_RNAseq.ipynb
@@ -109,7 +109,7 @@
     }
    ],
    "source": [
-    "cr = CountReads('~/Downloads/GSE109177_SafePR50_vs_TMX2PR50-ExpDiff_neurons_.csv', sep=',', igroup=1, \n",
+    "cr = CountReads('GSE109177_SafePR50_vs_TMX2PR50-ExpDiff_neurons_.csv.gz', sep=',', igroup=1, \n",
     "                group_sample_sep='_')\n",
     "cr.normalize_data(normalize_by='quantile5', normcutoff=10)\n",
     "print('Library size:', len(cr.seqids))\n",
@@ -323,12 +323,12 @@
    },
    "outputs": [],
    "source": [
-    "wt = CountReads('WT_raw.tsv',   sep='\\t', has_groups=False, header=None)\n",
+    "wt = CountReads('WT_raw.tsv.gz',   sep='\\t', has_groups=False, header=None)\n",
     "for i in [21, 22, 25, 28, 34, 36]: del wt.data['all'][i]\n",
     "wt.normalize_data(normalize_by='quantile5', normcutoff=10)\n",
     "wt_keys = sorted(wt.data['all'])\n",
     "\n",
-    "ko = CountReads('Snf2_raw.tsv', sep='\\t', has_groups=False, header=None)\n",
+    "ko = CountReads('Snf2_raw.tsv.gz', sep='\\t', has_groups=False, header=None)\n",
     "for i in [6, 13, 25, 35]: del ko.data['all'][i]\n",
     "ko.normalize_data(normalize_by='quantile5', normcutoff=10)\n",
     "ko_keys = sorted(ko.data['all'])"
@@ -887,7 +887,7 @@
     }
    ],
    "source": [
-    "cr = CountReads('~/Downloads/SrHt_expressionMatrix.txt', sep='\\t', igroup=1, \n",
+    "cr = CountReads('SrHt_expressionMatrix.txt.gz', sep='\\t', igroup=1, \n",
     "                group_sample_sep='ical', has_groups=True)\n",
     "cr.normalize_data(normalize_by='upper quantile4', normcutoff=10)\n",
     "print('Library size:', len(cr.seqids))\n",
