--- a/examples/human_classical_vs_nonclassical_monocyte_study_RNA-seq_analysis.ipynb
+++ b/examples/human_classical_vs_nonclassical_monocyte_study_RNA-seq_analysis.ipynb
@@ -130,7 +130,8 @@
    ],
    "source": [
     "cr = CountReads(\n",
-    "    'SrHt_monocyte_expressionMatrix.txt', # count matrix file name. It can be text or Excel files.\n",
+    "    'SrHt_monocyte_expressionMatrix.txt.gz', # count matrix file name. It can be text or Excel files.\n",
+    "                                             # zip compressed files (.gz) are supported.\n",
     "    sep='\\t',                    # field separator, this is a tab-separated file.\n",
     "    group_sample_sep='ical',     # the heading has format classical01\tclassical02.\n",
     "    igroup=1,           # the first igroup strings after split by group_sample_sep will\n",
